optimize_versioned_docs/version-3.13.0/self-managed/optimize-deployment/migration-update/3.9-to-3.10.md
---
id: 3.9-to-3.10
title: "Update notes (3.9.x to 3.10)"
---

:::note Heads up!
To update Optimize to version 3.10, perform the steps in the [migration and update instructions](./instructions.md).
:::

The update to 3.10 can be performed from any 3.9.x release.

Here you will find information about:

- Limitations
- Known issues
- Changes in supported environments
- Changes in behavior (for example, due to a new feature)
- Changes in translation resources

## Changes in supported environments

### Helm chart

For Optimize 3.10.1, a new environment variable introduced the option of specifying a redirection URL. However, the change is not compatible with Camunda Helm charts until it is fixed in 3.10.3 (and Helm chart 8.2.9). Therefore, those Optimize versions are coupled to certain Camunda Helm chart versions:

| Optimize version                  | Camunda Helm chart version |
| --------------------------------- | -------------------------- |
| Optimize 3.10.1 - Optimize 3.10.2 | 8.2.0 - 8.2.8              |
| Optimize 3.10.3+                  | 8.2.9+                     |

### Elasticsearch

Optimize now supports Elasticsearch `8.5` and `8.6`, but it requires at least Elasticsearch `7.16.2`.
Additionally, when updating to Optimize 3.10.x please note there are temporary changes in Optimize's Elasticsearch support as detailed below:

| Optimize version                  | Elasticsearch version            |
| --------------------------------- | -------------------------------- |
| Optimize 3.10.0 - Optimize 3.10.3 | 7.16.2+, 7.17.0+, 8.5.0+, 8.6.0+ |
| Optimize 3.10.4                   | 7.16.2+, 7.17.0+, 8.7.0+, 8.8.0+ |
| Optimize 3.10.5 - Optimize 3.10.x | 7.16.2+, 7.17.0+, 8.5.0+, 8.6.0+ |

See the [supported environments]($docs$/reference/supported-environments) section for the full range of supported versions.

If you need to update your Elasticsearch cluster, refer to the general [Elasticsearch update guide](https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-upgrade.html). Usually, the only thing you need to do is perform a [rolling update](https://www.elastic.co/guide/en/elasticsearch/reference/current/rolling-upgrades.html).

### Java

From Optimize 3.10.4, the minimum version of Java that Optimize supports is now Java 17. See the [Supported Environments]($docs$/reference/supported-environments) sections for more information on supported versions.

### Plugins

From 3.10.4, Optimize runs with Spring Boot 3. As a result, some plugin interfaces have been updated accordingly. More specifically, the [Engine Rest Filter Plugin](./../plugins/engine-rest-filter-plugin.md) and the [Single-Sign-On Plugin](./../plugins/single-sign-on.md) now import jakarta dependencies. If you use these plugins, you will need to adjust your implementation accordingly.

### Logging

In 3.10.4, Optimize's logging configuration format has also been updated. Please review the updated `environment-logback.xml` to make sure your configuration is valid.

## Changes in behavior

### API behavior

Before the 3.10.4 release, the Optimize API would accept requests when the URI contained a trailing slash (`/`). This is no longer the case, and requests containing a trailing slash will no longer be matched to the corresponding API path.

### Configuration changes

In the 3.10 version of Optimize, it is no longer possible to apply custom configuration to the UI header. The following
configuration options have therefore been removed:

- ui.header.textColor
- ui.header.pathToLogoIcon
- ui.header.backgroundColor

## Changes in translation files

In case you manage your own translations into different languages, you can find a diff below with all the changes that need to be translated for this release.

### Localization file

The following terms have been added to or removed from the localization file `en.json` since the last release:

[en.json.diff](../translation-diffs/differences_localization_390_3100.diff)

- Lines with a `+` in the beginning mark the addition/update of a term; lines with a `-` mark the removal of a term.
